# serializer version: 1
# name: test_select_state_snapshot[a1][select.dehumidifier_fan_speed-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'lowest',
        'low',
        'medium',
        'high',
        'auto',
        'off',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.dehumidifier_fan_speed',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Fan speed',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Fan speed',
    'platform': 'midea',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'fan_speed',
    'unique_id': '12345678_fan_speed',
    'unit_of_measurement': None,
  })
# ---
# name: test_select_state_snapshot[a1][select.dehumidifier_fan_speed-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Dehumidifier Fan speed',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'lowest',
        'low',
        'medium',
        'high',
        'auto',
        'off',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.dehumidifier_fan_speed',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'medium',
  })
# ---
# name: test_select_state_snapshot[a1][select.dehumidifier_water_level_setting-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        '25',
        '50',
        '75',
        '100',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.dehumidifier_water_level_setting',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Water level setting',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Water level setting',
    'platform': 'midea',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'water_level_set',
    'unique_id': '12345678_water_level_set',
    'unit_of_measurement': None,
  })
# ---
# name: test_select_state_snapshot[a1][select.dehumidifier_water_level_setting-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Dehumidifier Water level setting',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        '25',
        '50',
        '75',
        '100',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.dehumidifier_water_level_setting',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '50',
  })
# ---
# name: test_select_state_snapshot[ac][select.air_conditioner_airflow_horizontal-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'left',
        'left_mid',
        'middle',
        'right_mid',
        'right',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.air_conditioner_airflow_horizontal',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Airflow horizontal',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Airflow horizontal',
    'platform': 'midea',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'wind_lr_angle',
    'unique_id': '12345678_wind_lr_angle',
    'unit_of_measurement': None,
  })
# ---
# name: test_select_state_snapshot[ac][select.air_conditioner_airflow_horizontal-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air Conditioner Airflow horizontal',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'left',
        'left_mid',
        'middle',
        'right_mid',
        'right',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.air_conditioner_airflow_horizontal',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_select_state_snapshot[ac][select.air_conditioner_airflow_vertical-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'up',
        'up_mid',
        'middle',
        'down_mid',
        'down',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.air_conditioner_airflow_vertical',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Airflow vertical',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Airflow vertical',
    'platform': 'midea',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'wind_ud_angle',
    'unique_id': '12345678_wind_ud_angle',
    'unit_of_measurement': None,
  })
# ---
# name: test_select_state_snapshot[ac][select.air_conditioner_airflow_vertical-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air Conditioner Airflow vertical',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'up',
        'up_mid',
        'middle',
        'down_mid',
        'down',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.air_conditioner_airflow_vertical',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_select_state_snapshot[ac][select.air_conditioner_power_rate_limit-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        '1',
        '20',
        '40',
        '60',
        '80',
        '100',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.air_conditioner_power_rate_limit',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Power rate limit',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Power rate limit',
    'platform': 'midea',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'rate_select',
    'unique_id': '12345678_rate_select',
    'unit_of_measurement': None,
  })
# ---
# name: test_select_state_snapshot[ac][select.air_conditioner_power_rate_limit-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air Conditioner Power rate limit',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        '1',
        '20',
        '40',
        '60',
        '80',
        '100',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.air_conditioner_power_rate_limit',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '100',
  })
# ---
# name: test_select_state_snapshot[c3][select.heat_pump_wi_fi_controller_silent_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'silent',
        'super_silent',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.heat_pump_wi_fi_controller_silent_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Silent level',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Silent level',
    'platform': 'midea',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'silent_level',
    'unique_id': '12345678_silent_level',
    'unit_of_measurement': None,
  })
# ---
# name: test_select_state_snapshot[c3][select.heat_pump_wi_fi_controller_silent_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Heat Pump Wi-Fi Controller Silent level',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'silent',
        'super_silent',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.heat_pump_wi_fi_controller_silent_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_select_state_snapshot[fa][select.fan_oscillation_angle-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        '30',
        '60',
        '90',
        '120',
        '180',
        '360',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.fan_oscillation_angle',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Oscillation angle',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Oscillation angle',
    'platform': 'midea',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'oscillation_angle',
    'unique_id': '12345678_oscillation_angle',
    'unit_of_measurement': None,
  })
# ---
# name: test_select_state_snapshot[fa][select.fan_oscillation_angle-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Fan Oscillation angle',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        '30',
        '60',
        '90',
        '120',
        '180',
        '360',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.fan_oscillation_angle',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '90',
  })
# ---
# name: test_select_state_snapshot[fa][select.fan_oscillation_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'oscillation',
        'tilting',
        'curve_w',
        'curve_8',
        'reserved',
        'both',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.fan_oscillation_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Oscillation mode',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Oscillation mode',
    'platform': 'midea',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'oscillation_mode',
    'unique_id': '12345678_oscillation_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_select_state_snapshot[fa][select.fan_oscillation_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Fan Oscillation mode',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'oscillation',
        'tilting',
        'curve_w',
        'curve_8',
        'reserved',
        'both',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.fan_oscillation_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_select_state_snapshot[fa][select.fan_tilting_angle-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        '30',
        '60',
        '90',
        '120',
        '180',
        '360',
        'plus_60',
        'minus_60',
        '40',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.fan_tilting_angle',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Tilting angle',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Tilting angle',
    'platform': 'midea',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'tilting_angle',
    'unique_id': '12345678_tilting_angle',
    'unit_of_measurement': None,
  })
# ---
# name: test_select_state_snapshot[fa][select.fan_tilting_angle-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Fan Tilting angle',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        '30',
        '60',
        '90',
        '120',
        '180',
        '360',
        'plus_60',
        'minus_60',
        '40',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.fan_tilting_angle',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_select_state_snapshot[fc][select.air_purifier_detect_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'pm_25',
        'methanal',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.air_purifier_detect_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Detect mode',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Detect mode',
    'platform': 'midea',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'detect_mode',
    'unique_id': '12345678_detect_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_select_state_snapshot[fc][select.air_purifier_detect_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air Purifier Detect mode',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'pm_25',
        'methanal',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.air_purifier_detect_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_select_state_snapshot[fc][select.air_purifier_fan_speed-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'auto',
        'standby',
        'low',
        'medium',
        'high',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.air_purifier_fan_speed',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Fan speed',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Fan speed',
    'platform': 'midea',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'fan_speed',
    'unique_id': '12345678_fan_speed',
    'unit_of_measurement': None,
  })
# ---
# name: test_select_state_snapshot[fc][select.air_purifier_fan_speed-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air Purifier Fan speed',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'auto',
        'standby',
        'low',
        'medium',
        'high',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.air_purifier_fan_speed',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'auto',
  })
# ---
# name: test_select_state_snapshot[fc][select.air_purifier_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'standby',
        'auto',
        'manual',
        'sleep',
        'fast',
        'smoke',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.air_purifier_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Mode',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Mode',
    'platform': 'midea',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'mode',
    'unique_id': '12345678_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_select_state_snapshot[fc][select.air_purifier_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air Purifier Mode',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'standby',
        'auto',
        'manual',
        'sleep',
        'fast',
        'smoke',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.air_purifier_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'auto',
  })
# ---
# name: test_select_state_snapshot[fc][select.air_purifier_screen_display-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'bright',
        'dim',
        'off',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.air_purifier_screen_display',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Screen display',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Screen display',
    'platform': 'midea',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'screen_display',
    'unique_id': '12345678_screen_display',
    'unit_of_measurement': None,
  })
# ---
# name: test_select_state_snapshot[fc][select.air_purifier_screen_display-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air Purifier Screen display',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'bright',
        'dim',
        'off',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.air_purifier_screen_display',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'bright',
  })
# ---
# name: test_select_state_snapshot[fd][select.humidifier_fan_speed-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'lowest',
        'low',
        'medium',
        'high',
        'auto',
        'off',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.humidifier_fan_speed',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Fan speed',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Fan speed',
    'platform': 'midea',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'fan_speed',
    'unique_id': '12345678_fan_speed',
    'unit_of_measurement': None,
  })
# ---
# name: test_select_state_snapshot[fd][select.humidifier_fan_speed-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Humidifier Fan speed',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'lowest',
        'low',
        'medium',
        'high',
        'auto',
        'off',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.humidifier_fan_speed',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'auto',
  })
# ---
# name: test_select_state_snapshot[fd][select.humidifier_screen_display-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'bright',
        'dim',
        'off',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.humidifier_screen_display',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Screen display',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Screen display',
    'platform': 'midea',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'screen_display',
    'unique_id': '12345678_screen_display',
    'unit_of_measurement': None,
  })
# ---
# name: test_select_state_snapshot[fd][select.humidifier_screen_display-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Humidifier Screen display',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'bright',
        'dim',
        'off',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.humidifier_screen_display',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'bright',
  })
# ---
# name: test_select_state_snapshot[x40][select.integrated_ceiling_fan_direction-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        '60',
        '70',
        '80',
        '90',
        '100',
        'oscillate',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.integrated_ceiling_fan_direction',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Direction',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Direction',
    'platform': 'midea',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'direction',
    'unique_id': '12345678_direction',
    'unit_of_measurement': None,
  })
# ---
# name: test_select_state_snapshot[x40][select.integrated_ceiling_fan_direction-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Integrated Ceiling Fan Direction',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        '60',
        '70',
        '80',
        '90',
        '100',
        'oscillate',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.integrated_ceiling_fan_direction',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '90',
  })
# ---
